admin page changes

--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,7 @@
 {
   "name": "hyip",
   "authors": [
-    "Сергей Цибульченко <sc@rocketstation.ru>",
-    "Александр Корж <ak@rocketstation.ru>"
+    "Rocket Station"
   ],
   "description": "",
   "main": "",
