--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.6",
-    "jquery": "~2.2.1"
+    "jquery": "~2.2.1",
+    "jquery-ui": "^1.11.4"
   }
 }
